# MonitorSwitch

./: .gitignore  CMakeLists.txt  INSTALL_MACOS.md  INSTALL_WINDOWS.md  Info.plist.in  LICENSE  Makefile  MonitorSwitch.desktop  MonitorSwitch.iss  MonitorSwitch.manifest  MonitorSwitch.rc  README.md  build.bat  build.sh  build_windows_installer.bat  create_installer.bat  debug_windows.bat
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
include/: config.h
src/: main.cpp
src/core/: application.cpp  application.h  utils.cpp  utils.h
src/models/: data.cpp  data.h
src/services/autostart/: autostart_service.cpp  autostart_service.h  autostart_service_linux.cpp  autostart_service_mac.cpp
src/services/display/: display_service.cpp  display_service.h  display_service_linux.cpp  display_service_mac.cpp
src/services/storage/: storage_service.cpp  storage_service.h  storage_service_unix.cpp
src/services/usb/: usb_service.cpp  usb_service.h  usb_service_linux.cpp  usb_service_mac.cpp
src/ui/: mainwindow.cpp  mainwindow.h
src/ui/components/: button.cpp  button.h
tests/unit/: test_application.cpp  test_utils.cpp
